--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,10 +1,17 @@
 * {
 	margin: 0;
 	padding: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+}
+
+html {
+	font-size: 100%;
 }
 
 body {
-	font: normal 1rem sans-serif;
+	font: normal 1.2rem sans-serif;
 }
 
 #container {
@@ -12,15 +19,64 @@ body {
 	flex-wrap: wrap;
 }
 
+#name {
+	width: 100%;
+	height: 70px;
+	padding: 10px;
+	background-color: #e9e5dc;
+}
+
+#bar {
+	width: 100%;
+	padding: 10px;
+}
+
 #list {
-	width: 30%;
-	min-width: 250px;
-	height: 500px;
-	background-color: #C7574F;
+	width: 100%;
+	background-color: #da6161;
 }
 
 #map {
-	width: 70%;
-	min-width: 400px;
-	height: 500px;
+	width: 100%;
+}
+
+li {
+	padding: 10px;
+	font: normal 1.2rem sans-serif;
+	color: #fff;
+}
+
+li:hover {
+	background-color: #fff;
+	color: #666;
+	cursor: pointer;
+}
+
+.map-name {
+	font: normal .9rem sans-serif;
+}
+
+.map-address {
+	font: normal .7rem sans-serif;
+	color: #999;
+}
+
+@media screen and (min-width: 950px) {
+
+	#name {
+		width: 25%;
+	}
+
+	#bar {
+		width: 75%;
+	}
+
+	#list {
+		width: 25%;
+	}
+
+	#map {
+		width: 75%;
+	}
+
 }
