--- a/app/css/style.css
+++ b/app/css/style.css
@@ -21,7 +21,7 @@ body {
 
 #name {
 	width: 100%;
-	height: 70px;
+	height: 60px;
 	padding: 10px;
 	background-color: #e9e5dc;
 }
@@ -38,6 +38,28 @@ body {
 
 #map {
 	width: 100%;
+}
+
+#filter {
+	width: 100%;
+	padding: 10px;
+}
+
+input {
+	width: 80%;
+	padding: 0 5px;
+	font: normal 1.2rem/2 sans-serif;
+	border-radius: 2px;
+	border: 2px solid #666;
+}
+
+input:focus {
+	outline: 0;
+}
+
+img, input {
+	vertical-align: middle;
+	display: inline-block;
 }
 
 li {
