--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,9 +1,9 @@
 * {
 	margin: 0;
 	padding: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  box-sizing: border-box;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	box-sizing: border-box;
 }
 
 html {
@@ -74,7 +74,7 @@ li:hover {
 	cursor: pointer;
 }
 
-.map-name, .map-link {
+.map-name, .info-link {
 	font: normal 1rem/1.5rem sans-serif;
 }
 
@@ -83,27 +83,90 @@ li:hover {
 	color: #999;
 }
 
-.map-link {
+.info-link {
 	color: #da6161;
 	text-decoration: none;
 }
 
+
+/* The Modal (background) */
+#modal {
+	display: none;
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Sit on top */
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgb(0,0,0);
+	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+#modal-window {
+	background-color: #fefefe;
+	margin: 15% auto;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 80%;
+	overflow: auto;
+	box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+}
+
+#close {
+	color: #aaa;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+}
+
+#close:hover,
+#close:focus {
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+#wiki-content {
+	list-style: none;
+}
+
+#flickr-images {
+	display: flex;
+	flex-wrap: nowrap;
+	margin: 20px 0;
+}
+
+.flickr-picture {
+	width: 20%;
+	height: 250px;
+	border-right: 2px solid #fff;
+	background-size: cover;
+}
+
 @media screen and (min-width: 950px) {
 
-	#name {
+	#name, #list {
 		width: 25%;
 	}
 
-	#bar {
+	#bar, #map {
 		width: 75%;
 	}
 
-	#list {
-		width: 25%;
+}
+
+@media screen and (min-width: 1800px) {
+
+	#name, #list {
+		width: 15%;
 	}
 
-	#map {
-		width: 75%;
+	#bar, #map {
+		width: 85%;
+	}
+
+	#modal-window {
+		width: 50%;
 	}
 
 }
