--- a/app/css/style.css
+++ b/app/css/style.css
@@ -7,7 +7,7 @@
 }
 
 html {
-	font-size: 100%;
+	font-size: 60%;
 }
 
 body {
@@ -19,38 +19,40 @@ body {
 	flex-wrap: wrap;
 }
 
+#name, #list {
+	width: 30%;
+}
+
+#bar, #map {
+	width: 70%
+}
+
 #name {
-	width: 100%;
 	height: 60px;
 	padding: 10px;
 	background-color: #e9e5dc;
 }
 
-#bar {
-	width: 100%;
-	padding: 10px;
-}
-
 #list {
-	width: 100%;
 	background-color: #da6161;
+	height: calc(100vh - 60px);
+	overflow-y: scroll;
 }
 
-#map {
-	width: 100%;
+#bar {
+	padding: 10px 0 0 10px;
 }
 
 #filter {
 	width: 100%;
-	padding: 10px;
 }
 
 input {
-	width: 80%;
+	width: 85%;
 	padding: 0 5px;
 	font: normal 1.2rem/2 sans-serif;
 	border-radius: 2px;
-	border: 2px solid #666;
+	border: 2px solid #999;
 }
 
 input:focus {
@@ -138,12 +140,22 @@ li:hover {
 
 .flickr-picture {
 	width: 20%;
-	height: 250px;
+	height: 180px;
 	border-right: 2px solid #fff;
 	background-size: cover;
 }
 
-@media screen and (min-width: 950px) {
+@media screen and (min-width: 600px) {
+
+	html {
+		font-size: 70%;
+	}
+
+@media screen and (min-width: 800px) {
+
+	html {
+		font-size: 80%;
+	}
 
 	#name, #list {
 		width: 25%;
@@ -153,20 +165,22 @@ li:hover {
 		width: 75%;
 	}
 
+@media screen and (min-width: 1100px) {
+
+	html {
+		font-size: 100%;
+	}
+
 }
 
-@media screen and (min-width: 1800px) {
+@media screen and (min-width: 1400px) {
 
 	#name, #list {
-		width: 15%;
+		width: 20%;
 	}
 
 	#bar, #map {
-		width: 85%;
-	}
-
-	#modal-window {
-		width: 50%;
+		width: 80%;
 	}
 
 }
