--- a/app/css/style.css
+++ b/app/css/style.css
@@ -7,7 +7,7 @@
 }
 
 html {
-	font-size: 60%;
+	font-size: 70%;
 }
 
 body {
@@ -95,18 +95,16 @@ li:hover {
 	text-decoration: underline;
 }
 
-
-/* The Modal (background) */
 #modal {
 	display: none;
-	position: fixed; /* Stay in place */
-	z-index: 1; /* Sit on top */
+	position: fixed;
+	z-index: 1;
 	left: 0;
 	top: 0;
 	width: 100%;
 	height: 100%;
 	background-color: rgb(0,0,0);
-	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+	background-color: rgba(0,0,0,0.4);
 }
 
 #modal-window {
@@ -144,7 +142,7 @@ li:hover {
 }
 
 .flickr-picture {
-	width: 20%;
+	width: 50%;
 	height: 180px;
 	border-right: 2px solid #fff;
 	background-size: cover;
