--- a/app/css/style.css
+++ b/app/css/style.css
@@ -14,32 +14,38 @@ body {
 	font: normal 1.2rem sans-serif;
 }
 
-#container {
+h2 {
+	margin-bottom: 15px;
+}
+
+.container {
 	display: flex;
 	flex-wrap: wrap;
 }
 
-#name, #list {
+.name,
+.list {
 	width: 30%;
 }
 
-#bar, #map {
+.bar,
+.map {
 	width: 70%
 }
 
-#name {
+.name {
 	height: 60px;
 	padding: 10px;
 	background-color: #e9e5dc;
 }
 
-#list {
+.list {
 	background-color: #da6161;
 	height: calc(100vh - 60px);
 	overflow-y: scroll;
 }
 
-#bar {
+.bar {
 	padding: 10px 0 0 10px;
 }
 
@@ -59,7 +65,8 @@ input:focus {
 	outline: 0;
 }
 
-img, input {
+img,
+input {
 	vertical-align: middle;
 	display: inline-block;
 }
@@ -76,7 +83,8 @@ li:hover {
 	cursor: pointer;
 }
 
-.map-name, .info-link {
+.map-name,
+.info-link {
 	font: normal 1rem/1.5rem sans-serif;
 }
 
@@ -95,7 +103,7 @@ li:hover {
 	text-decoration: underline;
 }
 
-#modal {
+.modal {
 	display: none;
 	position: fixed;
 	z-index: 1;
@@ -103,49 +111,46 @@ li:hover {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgb(0,0,0);
-	background-color: rgba(0,0,0,0.4);
+	background-color: rgba(0, 0, 0, .4);
 }
 
-#modal-window {
-	background-color: #fefefe;
+.modal-window {
+	background-color: #fff;
 	margin: 15% auto;
 	padding: 20px;
-	border: 1px solid #888;
 	width: 80%;
-	overflow: auto;
 	box-shadow: 0 0 20px rgba(0, 0, 0, .5);
 }
 
-#close {
+.close {
 	color: #aaa;
 	float: right;
 	font-size: 28px;
 	font-weight: bold;
 }
 
-#close:hover,
-#close:focus {
-	color: black;
+.close:hover,
+.close:focus {
+	color: #000;
 	text-decoration: none;
 	cursor: pointer;
 }
 
-#wiki-content {
-	list-style: none;
-}
-
-#flickr-images {
+.flickr-pictures {
 	display: flex;
 	flex-wrap: nowrap;
 	margin: 20px 0;
+	overflow-x: scroll;
 }
 
-.flickr-picture {
-	width: 50%;
+.flickr-images {
+	float: left;
 	height: 180px;
-	border-right: 2px solid #fff;
-	background-size: cover;
+	border-right: 5px solid #fff;
+}
+
+.wiki-content {
+	list-style: none;
 }
 
 @media screen and (min-width: 600px) {
@@ -162,11 +167,13 @@ li:hover {
 		font-size: 80%;
 	}
 
-	#name, #list {
+	.name,
+	.list {
 		width: 25%;
 	}
 
-	#bar, #map {
+	.bar,
+	.map {
 		width: 75%;
 	}
 
@@ -182,11 +189,13 @@ li:hover {
 
 @media screen and (min-width: 1400px) {
 
-	#name, #list {
+	.name,
+	.list {
 		width: 20%;
 	}
 
-	#bar, #map {
+	.bar,
+	.map {
 		width: 80%;
 	}
 
@@ -194,11 +203,13 @@ li:hover {
 
 @media screen and (min-width: 2000px) {
 
-	#name, #list {
+	.name,
+	.list {
 		width: 15%;
 	}
 
-	#bar, #map {
+	.bar,
+	.map {
 		width: 85%;
 	}
 
