--- a/app/css/style.css
+++ b/app/css/style.css
@@ -49,7 +49,7 @@ h2 {
 	padding: 10px 0 0 10px;
 }
 
-#filter {
+.filter {
 	width: 100%;
 }
 
@@ -206,7 +206,7 @@ li:hover {
 	}
 
 	.modal-window {
-		width: 75%;
+		width: 70%;
 	}
 
 }
